создан экран добавления нотификации

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="grey">#5F5F5F</color>
     <color name="light_grey">#C4C4C4</color>
+    <color name="blue">#018786</color>
 </resources>
