--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,7 @@
 <resources>
     <dimen name="view_margin">16dp</dimen>
     <dimen name="title_text_size">18sp</dimen>
+    <dimen name="subtitle_text_size">16sp</dimen>
     <dimen name="ordinary_text_size">14sp</dimen>
+    <dimen name="edit_text_size">50dp</dimen>
 </resources>
